Fixed collapsed panel tab change.
It's kinda hackie, I need to find a proper fix.

--- a/client/ide/styl/ide.styl
+++ b/client/ide/styl/ide.styl
@@ -60,6 +60,9 @@ body.ide.dark
       height            2px
   .ace_editor
     height              100%
+  .kdtabhandle.dummy
+  .kdview.dummy
+    display             none
 
 
 // sidebar icons
